--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -4,13 +4,13 @@
 }
 
 body {
-  background-color: #2D2D2D;
+  background-color: #535239;
 }
 
 .nav {
   display: flex;
   flex: auto;
-  background-color: #0C70F2;
+  background-color: #ff0909;
   width: 100%;
   height: 74px;
 }
@@ -27,7 +27,7 @@ body {
 }
 
 .nav p {
-  color: #0C70F2;
+  color: #ff0909;
   font-size: 25px;
   font-family: Poppins;
   font-style: normal;
@@ -49,7 +49,7 @@ body {
   height: auto;
   flex-direction: column;
   flex-shrink: 0;
-  background: #2D2D2D;
+  background:#535239;
   text-align: center;
 }
 
@@ -135,7 +135,7 @@ body {
 }
 
 .bt {
-  background-color: #2D2D2D;
+  background-color:#535239;
 }
 
 .add-task-container {
@@ -145,7 +145,7 @@ body {
 
 .add-task-container input {
   width: 870px;
-  background-color: #2D2D2D;
+  background-color: #535239;
   color: #FFF;
   font-size: 25px;
   font-family: Raleway;
@@ -155,7 +155,7 @@ body {
 }
 
 .add-task-button {
-  background-color: #2D2D2D;
+  background-color: #535239;
   padding-right: 400px;
 }
 
